# CRMStudio

./: .gitignore  README.md  feature_list.md  metrics.md  pyproject.toml  requirements.txt  setup.py
.github/chatmodes/: plan.chatmode.md
documentation/: feature_list.md  implementation_plan.md  restructuring.md
examples/: heterogeneity_test_example.py  monitoring_config.yaml  pd_disc_example.py  plots_example_run.py  random_ex.py  rating_heterogeneity_test_example.py  rating_homogeneity_test_example.py  simplified_plotting_example.py  test_plots.py
obsolete/config/: monitoring_config.yaml
obsolete/documentation/: PD_LGD_tests.xlsx  metrics.md
obsolete/examples/: concentration_metrics_example.py  heterogeneity_test_example.py  monitoring_pipeline_example.py  random_ex.py  stability_metrics_example.py
obsolete/tests/: conftest.py
reports/: report_20250903_160044.html
results/: alerts_20250903_160044.json  results_20250903_154835.json  results_20250903_155808.json  results_20250903_160044.json
src/crmstudio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crmstudio/config/: loader.py
src/crmstudio/core/: __init__.py  base.py  config_loader.py  data_classes.py  plotting.py
src/crmstudio/metrics/: __init__.py  pd_metrics.py
src/crmstudio/monitoring/: __init__.py  pipeline.py
src/crmstudio/reports/: __init__.py  generator.py
src/crmstudio/templates/: config.yaml
tests/: __init__.py  test_refactoring.py
tests/test_core/: test_core.py
tests/test_integration/: test_integration.py
tests/test_metrics/: test_pd_metrics.py
(+18 files in other folders)
